2023/08-werf-local-dev/.helm/templates/service-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: habr-app-backend
spec:
  selector:
    app: habr-app-backend
  ports:
  - name: http
    port: 8080
